tests/test_io/good/subscope.catala_en
## Test

```catala
declaration scope A:
  context a content integer
  input b content integer
  output c content integer
  internal d content integer

declaration scope B:
  a scope A

scope A:
  definition a equals 0
  definition c equals b + d
  definition d equals 1 + a

scope B:
  definition a.b equals 2
  assertion a.c = 1
```

```catala-test {id="B.Dcalc"}
catala Dcalc -s B
```

```catala-test {id="B.Typecheck"}
catala Typecheck -s B
```
