tests/test_io/bad/forgot_input.catala_en
# Test

```catala
declaration scope A:
  output a content integer
  input x content integer

declaration scope B:
  a scope A

scope A:
  definition a equals x + 1

scope B:
  assertion a.a = 1
```